<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pivotal.boomerang_pivotal.HelpRequestActivity"
    tools:showIn="@layout/activity_help_request">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_default"
            android:drawableLeft="@mipmap/ic_help_black"
            android:drawablePadding="20dp"
            android:padding="25dp"/>
        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
        <EditText
            android:id="@+id/person_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_default"
            android:drawableLeft="@mipmap/ic_person"
            android:drawablePadding="20dp"
            android:padding="25dp"/>
        <EditText
            android:id="@+id/time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_default"
            android:drawableLeft="@mipmap/ic_time"
            android:drawablePadding="20dp"
            android:padding="25dp"/>
        <EditText
            android:id="@+id/note_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_default"
            android:drawableLeft="@mipmap/ic_note"
            android:drawablePadding="20dp"
            android:padding="25dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_help_button"
            android:background="@color/colorPrimary"
            android:onClick="onAskForHelpClicked"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
