<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pivotal.boomerang_pivotal.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorBackgroundGrey"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/need_help_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorNeed"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/need_help"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:drawableRight="@mipmap/need_hand_help_ic"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/need_help"
                android:textSize="20sp"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@android:color/black"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDividerGrey"
                    android:layout_margin="@dimen/activity_horizontal_margin" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/cta"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="right"
                android:drawableRight="@mipmap/checkmark_ic"
                android:drawablePadding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/want_help_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWant"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/want_to_help"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:drawableRight="@mipmap/want_hand_help_ic"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/want_to_help"
                android:textSize="20sp"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@android:color/black"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDividerGrey"
                    android:layout_margin="@dimen/activity_horizontal_margin" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/cta"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="right"
                android:drawableRight="@mipmap/checkmark_ic"
                android:drawablePadding="8dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
